--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,26 @@
   --color-white: #fff;
 }
 
+::-webkit-scrollbar {
+  width: 0.9rem;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #ccc;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #008b8b;
+  background-clip: content-box;
+  box-shadow: inset 0 0 0.6rem rgba(0, 0, 0, 0.3);
+  border-radius: 0.45rem;
+  transition: all 0.2s ease-in-out;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #014d4d;
+}
+
 *,
 *::before,
 *::after {
@@ -15,6 +35,9 @@ html {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   font-size: 62.5%;
+  scroll-behavior: smooth;
+  scrollbar-width: thin;
+  scrollbar-color: #ccc;
   overflow-x: hidden;
 }
 
