feat: add new class name

--- a/src/index.css
+++ b/src/index.css
@@ -83,7 +83,8 @@ a:visited {
 }
 
 .username__icon,
-.password__icon {
+.password__icon,
+.register__icon {
   font-size: 2rem !important;
   color: #008080;
   position: absolute;
