feat: add new class name

--- a/src/index.css
+++ b/src/index.css
@@ -100,7 +100,8 @@ a:visited {
   right: 2rem;
 }
 
-.username__icon--light {
+.username__icon--light,
+.password__icon--light {
   color: #008080;
 }
 
