--- a/src/index.css
+++ b/src/index.css
@@ -105,6 +105,7 @@ a:visited {
   color: #008080;
 }
 
-.username__icon--dark {
+.username__icon--dark,
+.password__icon--dark {
   color: rgb(156, 156, 156);
 }
