feat: add new class name

--- a/src/index.css
+++ b/src/index.css
@@ -101,7 +101,8 @@ a:visited {
 }
 
 .username__icon--light,
-.password__icon--light {
+.password__icon--light,
+.register__icon--light {
   color: #008080;
 }
 
