feat: add new class name

--- a/src/index.css
+++ b/src/index.css
@@ -74,6 +74,10 @@ a:visited {
   outline-color: #777777;
 }
 
+.nav__link--dark:focus {
+  outline-color: rgb(156, 156, 156);
+}
+
 .active {
   color: #008b8b !important;
 }
