feat: add new class names

--- a/src/index.css
+++ b/src/index.css
@@ -142,6 +142,10 @@ a:visited {
   fill: #919090 !important;
 }
 
+.icon__add,
+.icon__remove {
+}
+
 @keyframes fadeIn {
   from {
     opacity: 0;
